<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/W"
        android:inputType="number" />

    <EditText
        android:id="@+id/etH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/H"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C" />

        <Button
            android:id="@+id/btnRD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RD" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLCD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LCD" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LCBMI" />

    <TextView
        android:id="@+id/tV0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>